# C-FlappyBird

./: CMakeLists.txt  README.md
src/: game.c  game.h  load_image.c  load_image.h  macros.h  main.c  misc.c  misc.h  structs.h
